--- a/index.html
+++ b/index.html
@@ -1,12 +1,2 @@
-<p>This was one of my 
-    multiline sample paragraphs</p>
-
--<p>This text will be deleted.</p>
--
--<p>This text will be updated.</p>
-+<p>This text will be updated
-+ with some extra content.</p>
-
-+<p>This one is completely new.</p>
-+
-<p>one more line of text.</p>
+This is my firswt git file.
+I would like to see how it works.
