--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-This is my first file.
+This is my second file.
 I would like to see how it works.
 This is to show the changes in the feature branch.
