--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-This is my second file.
-I would like to see how it works.
-This is to show the changes in the feature branch.
+Hi guys.
+This is my first file to see how git and gitHub work.
+Great day ahead.
